# restir-pt

./: .gitmodules  CMakeLists.txt
cmake/: embed_ptx.cmake
scenes/cornell-box/: scene_v3.xml
src/: main.cpp  pt-math.cpp  pt-math.h  viewer.cpp  viewer.h  world.h
src/cuda/: pathTracer.cu  pathTracer.h
src/loader/: mitsuba3.cpp  mitsuba3.h
